--- a/src/scss/pages/about/blogs.scss
+++ b/src/scss/pages/about/blogs.scss
@@ -1,6 +1,12 @@
+@import "../../utils/variables";
+@import "../../utils/mixin";
+@import "../../common/reset";
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
   position: fixed;
-  top: 120px;
   width: 100%;
   z-index: 990;
   transition: 0.3s all linear;
@@ -220,17 +226,15 @@ header {
     }
   }
   .head-bottom {
-    background-color: transparent;
+    background-color: $additional-white;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
-  transition: 0.3s all ease-in-out;
+    transition: 0.3s all ease-in-out;
 
-    @media (min-width:1000px) {
-    box-shadow: 0 10px 20px transparent;
-      
+    @media (min-width: 1000px) {
+      box-shadow: 0 10px 20px transparent;
     }
-    &.white-bg{
-      background-color: white ;
-
+    &.white-bg {
+      background-color: white;
     }
     .head-core {
       padding: 10px 0px;
@@ -240,7 +244,7 @@ header {
       .head-wrap {
         max-width: 1140px;
         margin: 0 auto;
-        @include flexible($jc: space-between,$ai:center);
+        @include flexible($jc: space-between, $ai: center);
         align-content: center;
         padding: 0 20px;
 
@@ -265,7 +269,7 @@ header {
           transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
           opacity: 1;
           visibility: visible;
-          @include flexible($ai:center);
+          @include flexible($ai: center);
 
           &.tgl {
             display: none;
@@ -352,7 +356,6 @@ header {
               width: 45px;
               height: 45px;
               padding: 5px 0 2px 18px;
-
             }
             span {
               background-repeat: no-repeat;
@@ -380,7 +383,7 @@ header {
             &.bimg {
               background-image: url("https://www.yelo.az/site/templates/style/img/menu_toggle_close.svg") !important;
             }
-            &.smaller{
+            &.smaller {
               width: 45px;
               height: 45px;
             }
@@ -388,150 +391,102 @@ header {
         }
       }
     }
-    .head_adds {
-      visibility: hidden;
-      height: 0; //height:0;
-      max-height: calc(100vh - 140px);
-      overflow-y: hidden; //hidden
-      transition: all ease 0.5s;
-      background-color: $additional-white;
-      width: 100%;
-      &.opened {
-        height: auto;
-        visibility: visible;
-        overflow-y: scroll;
-        
-      }
-      &.whitee{
-        background-color: $additional-white;
-      }
-      .sub_menu_wrap {
-        background-color: $additional-white;
-        padding: 20px;
-        opacity: 1;
-        transition: all 0.4s cubic-bezier(0.52, 0.01, 0.16, 1) !important;
-        overflow: auto;
-        max-height: calc(100vh - 150px);
-        @media (min-width: 1000px) {
-          padding: 10px 20px 50px;
-          @include flexible($jc: space-between);
+  }
+}
+
+main {
+  padding-top: 138px;
+  .blogs {
+    .container {
+      .block_title {
+        margin-bottom: 20px;
+        b {
+          padding: 7px 0px;
         }
-        .menu_left {
-          width: 100%;
-          padding: 0 0 100px 0;
-          @media (min-width: 1000px) {
-            width: calc(100% - 346px);
-            padding: 0 30px 0 0;
-          }
-          .menu_adds {
-            width: 100%;
+      }
+      .blogs_content {
+        @include flexible($wrap:wrap);
+        margin: 0;
+        .blog{
+          width: 33.3333%;
+          padding: 20px;
+          .col_content {
+            margin-bottom: 10px;
             border-radius: 10px;
             border: 1px solid #ececec;
-            margin: 0 0 20px 0;
-            display: block;
-            @media (min-width: 1000px) {
-              &.mob_only {
-                display: none;
+            height: 100%;
+            overflow: hidden;
+            .news_1_desc {
+              padding: 20px;
+              position: relative;
+              b {
+                font-size: $font-size-md;
+                font-weight: bold;
+                line-height: 24px;
+                display: inline-block;
+                min-height: 72px;
               }
-            }
-            ul {
-              @include flexible($jc: space-between);
-              li {
-                width: 50%;
-                text-align: center;
-                font-size: $font-size-lg;
-                &:first-child {
-                  border-right: 1px solid #ececec;
-                }
-                a {
-                  display: block;
-
-                  width: 100%;
-                  padding: 10px 0;
-                  text-align: center;
+              p {
+                color: rgba(0, 0, 0, 0.5);
+                font-size: $font-size-sm;
+                line-height: 20px;
+                padding: 67px 0 0 0;
+              }
+              .news_foot {
+                @include flexible(
+                  $jc: space-between,
+                  $wrap: nowrap,
+                  $ai: flex-start
+                );
+                align-content: stretch;
+                .arr_bttn {
+                  margin-top: 10px;
                   background: none;
+                  padding: 5px 0px;
+                  display: inline-block;
+                  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+                  color: $additional-blue;
+                }
+                .time {
+                  display: inline-block;
+                  margin-top: 13px;
+                  color: rgba(0, 0, 0, 0.6);
                 }
               }
-              .tm_8819 {
-                .ht_location {
-                  color: rgba(0, 0, 0, 0.5);
-                  .mobile_menu_icon {
-                    width: 20px;
-                    height: 20px;
-                    display: inline-block;
-                    vertical-align: middle;
-                    position: relative;
-                    top: -2px;
-                  }
-                  p {
-                    display: inline-block;
-                    vertical-align: middle;
-                    font-size: $font-size-md;
-                  }
-                }
-              }
-              .tm_1251 {
-                .ht_location {
-                  color: rgba(0, 0, 0, 0.5);
-                  .mobile_menu_icon {
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    width: 20px;
-                    height: 20px;
-                    display: inline-block;
-                    vertical-align: middle;
-                    position: relative;
-                    top: -2px;
-                  }
-                  p {
-                    display: inline-block;
-                    vertical-align: middle;
-                    font-size: $font-size-md;
-                  }
-                }
-              }
-            }
-          }
-          .exp_nav {
-            display: block;
-            @media (min-width: 1000px) {
-              display: grid;
-              grid-template-columns: 33.33% 33.33% 33.33%;
-              grid-gap: 10px;
-            }
-            .exp_nav_item {
-              padding: 0 0 20px 0;
-              .m_nav {
-                font-size: $font-size-22;
-                font-weight: 600;
+              .full_link {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
                 margin: 0;
-                display: block;
-                color: $secondary-color;
-              }
-              ul {
-                li {
-                  margin: 0;
-                  font-size: $font-size-lg;
-                  a {
-                    color: rgba(0, 0, 0, 0.5);
-                    font-size: $font-size-md;
-                    white-space: inherit;
-                  }
-                }
               }
             }
           }
         }
-        .menu_right {
-          border: 1px solid #ececec;
-          background-size: cover;
-          background-position: center;
-          border-radius: 10px;
-          display: block;
-          @media (min-width: 1000px) {
-            margin: 0 0 70px 0;
-            width: 345px;
-            height: 345px;
+      }
+      .news_link {
+        padding: 25px 0;
+        text-align: center;
+        .all_news {
+          display: inline-block;
+          width: auto;
+          height: 48px;
+          padding: 0 54px 0 20px;
+          color: #0091fe;
+          line-height: 50px;
+          background-repeat: no-repeat;
+          background-position: calc(100% - 12px) 50%;
+          box-shadow: inset 0 0 0 1px #0091fe;
+          border-radius: 6px;
+          transition: 0.2s all ease-in-out;
+          &:hover {
+            background-image: url("https://www.yelo.az/site/templates/style/img/white_arr.svg") !important;
+            background-repeat: no-repeat;
+            background-position: calc(100% - 12px) 50%;
+            background-color: $additional-blue;
+            color: $additional-white;
           }
         }
       }
