--- a/src/scss/pages/home/_main.scss
+++ b/src/scss/pages/home/_main.scss
@@ -131,7 +131,7 @@ body {
                     width: auto;
                     margin-right: 10px;
                     display: inline-block;
-                    padding: 13px 20px;
+                    padding: 10px 20px;
                     font-size: $font-size-md;
                     height: auto;
                     color: $additional-white;
@@ -218,7 +218,7 @@ body {
       padding: 0 15px;
       margin-bottom: 5px;
       @media (min-width: 1000px) {
-        padding: 0px 20px;
+        padding: 0px;
         @include flexible($jc: space-between);
       }
       .block-heading {
@@ -366,7 +366,7 @@ body {
   padding: 0px 15px;
   .container {
     padding: 0;
-    .block_content {
+    .blocks_content {
       margin: 0;
       display: block;
       @media (min-width: 1000px) {
@@ -374,7 +374,7 @@ body {
       }
       .card_order {
         width: 100%;
-        padding: 0;
+        padding: 10px;
         margin-bottom: 15px;
         @media (min-width: 1000px) {
           padding: 0px 15px;
@@ -388,7 +388,9 @@ body {
           background-color: #f3f1f7;
           position: relative;
           perspective: 2000px;
+          width: 100%;
           @media (min-width: 1000px) {
+            width: 100%;
             overflow: hidden;
           }
           .card_3d {
@@ -502,64 +504,73 @@ body {
 
 .blogs {
   .container {
-    .block_heading {
-      b {
-        padding: 7px 0px;
+    .block_title {
+      .block_heading {
+        b {
+          padding: 7px 0px;
+        }
       }
     }
-    .block_content {
-      display: block;
+    .blogs_content { 
+      display: flex;
       margin: 0;
-      .col_content {
-        border-radius: 10px;
-        border: 1px solid #ececec;
-        height: 100%;
-        overflow: hidden;
-        .news_1_desc {
-          padding: 20px;
-          position: relative;
-          b {
-            font-size: $font-size-md;
-            font-weight: bold;
-            line-height: 24px;
-            display: inline-block;
-            min-height: 72px;
-          }
-          p {
-            color: rgba(0, 0, 0, 0.5);
-            font-size: $font-size-sm;
-            line-height: 20px;
-            padding: 67px 0 0 0;
-          }
-          .news_foot {
-            @include flexible(
-              $jc: space-between,
-              $wrap: nowrap,
-              $ai: flex-start
-            );
-            align-content: stretch;
-            .arr_bttn {
-              margin-top: 10px;
-              background: none;
-              padding: 5px 0px;
+      .blogItem {
+        width: 100%;
+        padding: 15px;
+        @media (min-width:1000px) {
+          width: 33.3333%;
+        }
+        .col_content {
+          border-radius: 10px;
+          border: 1px solid #ececec;
+          height: 100%;
+          overflow: hidden;
+          .news_1_desc {
+            padding: 20px;
+            position: relative;
+            b {
+              font-size: $font-size-md;
+              font-weight: bold;
+              line-height: 24px;
               display: inline-block;
-              transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
-              color: $additional-blue;
+              min-height: 72px;
             }
-            .time {
+            p {
+              color: rgba(0, 0, 0, 0.5);
+              font-size: $font-size-sm;
+              line-height: 20px;
+              padding: 67px 0 0 0;
+            }
+            .news_foot {
+              @include flexible(
+                $jc: space-between,
+                $wrap: nowrap,
+                $ai: flex-start
+              );
+              align-content: stretch;
+              .arr_bttn {
+                margin-top: 10px;
+                background: none;
+                padding: 5px 0px;
+                display: inline-block;
+                transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+                color: $additional-blue;
+              }
+              .time {
+                display: inline-block;
+                margin-top: 13px;
+                color: rgba(0, 0, 0, 0.6);
+              }
+            }
+            .full_link {
               display: inline-block;
-              margin-top: 13px;
-              color: rgba(0, 0, 0, 0.6);
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              top: 0;
+              left: 0;
+              margin: 0;
             }
-          }
-          .full_link {
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            margin: 0;
           }
         }
       }
@@ -574,17 +585,17 @@ body {
         padding: 0 54px 0 20px;
         color: #0091fe;
         line-height: 50px;
-        background-repeat: no-repeat ;
-        background-position:calc(100% - 12px) 50% ;
+        background-repeat: no-repeat;
+        background-position: calc(100% - 12px) 50%;
         box-shadow: inset 0 0 0 1px #0091fe;
         border-radius: 6px;
         transition: 0.2s all ease-in-out;
-        &:hover{
-        background-image: url('https://www.yelo.az/site/templates/style/img/white_arr.svg') !important;
-        background-repeat: no-repeat ;
-        background-position:calc(100% - 12px) 50% ;
-        background-color: $additional-blue;
-        color: $additional-white;
+        &:hover {
+          background-image: url("https://www.yelo.az/site/templates/style/img/white_arr.svg") !important;
+          background-repeat: no-repeat;
+          background-position: calc(100% - 12px) 50%;
+          background-color: $additional-blue;
+          color: $additional-white;
         }
       }
     }
