--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.block .container .block_content .card_order .card_block .c_b_desc .yelo_bttn {
+.block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn {
   width: 100%;
   color: #000000;
   background-color: #ffc628;
@@ -11,7 +11,7 @@
   display: inline-block;
   cursor: pointer;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .yelo_bttn:hover {
+.block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn:hover {
   background-color: #000000;
   color: #fff;
 }
@@ -24,6 +24,10 @@
   list-style: none;
 }
 
+ul {
+  padding: 0;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   color: #000000;
@@ -34,12 +38,14 @@ body {
 .container {
   max-width: 1140px;
   margin: auto;
+  padding: 0;
 }
 
 a {
   cursor: pointer;
   white-space: nowrap;
   color: #000000;
+  text-decoration: none;
 }
 
 h1,
@@ -462,6 +468,8 @@ header .head-bottom .head-core .head-wrap nav {
   transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
   opacity: 1;
   visibility: visible;
+  display: flex;
+  align-items: center;
 }
 header .head-bottom .head-core .head-wrap nav.tgl {
   display: none;
@@ -471,6 +479,10 @@ header .head-bottom .head-core .head-wrap nav.tgl {
     display: none;
   }
 }
+header .head-bottom .head-core .head-wrap nav ul {
+  height: 100%;
+  margin: 0;
+}
 header .head-bottom .head-core .head-wrap nav ul li {
   display: inline-block;
   margin: 0px 30px 0px 0px;
@@ -478,7 +490,6 @@ header .head-bottom .head-core .head-wrap nav ul li {
 header .head-bottom .head-core .head-wrap nav ul li a {
   font-size: 16px;
   color: #000000;
-  padding: 14px 0;
   display: block;
   position: relative;
 }
@@ -548,7 +559,7 @@ header .head-bottom .head-core .head-wrap .head_right .o_banking:hover span {
 header .head-bottom .head-core .head-wrap .head_right .o_banking.scrolled {
   width: 45px;
   height: 45px;
-  padding: 5px 0 2px 25px;
+  padding: 5px 0 2px 18px;
 }
 header .head-bottom .head-core .head-wrap .head_right .o_banking span {
   background-repeat: no-repeat;
@@ -595,6 +606,9 @@ header .head-bottom .head_adds.opened {
   height: auto;
   visibility: visible;
   overflow-y: scroll;
+}
+header .head-bottom .head_adds.whitee {
+  background-color: #fff;
 }
 header .head-bottom .head_adds .sub_menu_wrap {
   background-color: #fff;
@@ -887,7 +901,7 @@ body {
   width: auto;
   margin-right: 10px;
   display: inline-block;
-  padding: 13px 20px;
+  padding: 10px 20px;
   font-size: 16px;
   height: auto;
   color: #fff;
@@ -972,7 +986,7 @@ body {
 }
 @media (min-width: 1000px) {
   .stories .container .block_title {
-    padding: 0px 20px;
+    padding: 0px;
     display: flex;
     justify-content: space-between;
   }
@@ -1123,28 +1137,28 @@ body {
 .block .container {
   padding: 0;
 }
-.block .container .block_content {
+.block .container .blocks_content {
   margin: 0;
   display: block;
 }
 @media (min-width: 1000px) {
-  .block .container .block_content {
+  .block .container .blocks_content {
     display: flex;
     justify-content: flex-start;
   }
 }
-.block .container .block_content .card_order {
+.block .container .blocks_content .card_order {
   width: 100%;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 15px;
 }
 @media (min-width: 1000px) {
-  .block .container .block_content .card_order {
+  .block .container .blocks_content .card_order {
     padding: 0px 15px;
     line-height: 2.6;
   }
 }
-.block .container .block_content .card_order .card_block {
+.block .container .blocks_content .card_order .card_block {
   overflow: visible;
   border-radius: 10px;
   border: 1px solid #ececec;
@@ -1152,13 +1166,15 @@ body {
   background-color: #f3f1f7;
   position: relative;
   perspective: 2000px;
+  width: 100%;
 }
 @media (min-width: 1000px) {
-  .block .container .block_content .card_order .card_block {
+  .block .container .blocks_content .card_order .card_block {
+    width: 100%;
     overflow: hidden;
   }
 }
-.block .container .block_content .card_order .card_block .card_3d {
+.block .container .blocks_content .card_order .card_block .card_3d {
   width: 150px;
   height: 240px;
   position: absolute;
@@ -1173,11 +1189,11 @@ body {
   transition: all 0.4s cubic-bezier(0.52, 0.01, 0.16, 1);
   transform: matrix3d(0.858606, 0.298387, 0, -0.000414946, -0.651602, 0.939378, 0, -0.0000494499, 0, 0, 1, 0, 216, -3, 0, 1);
 }
-.block .container .block_content .card_order .card_block .card_3d:hover {
+.block .container .blocks_content .card_order .card_block .card_3d:hover {
   top: 20px;
 }
 @media (min-width: 1000px) {
-  .block .container .block_content .card_order .card_block .card_3d {
+  .block .container .blocks_content .card_order .card_block .card_3d {
     width: 190px;
     height: 300px;
     transform: none;
@@ -1185,51 +1201,51 @@ body {
     left: inherit;
   }
 }
-.block .container .block_content .card_order .card_block .c_b_desc {
+.block .container .blocks_content .card_order .card_block .c_b_desc {
   padding: 280px 20px 20px;
   width: 100%;
 }
 @media (min-width: 1000px) {
-  .block .container .block_content .card_order .card_block .c_b_desc {
+  .block .container .blocks_content .card_order .card_block .c_b_desc {
     width: 50%;
     padding: 30px 0 30px 30px;
   }
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_b {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_b {
   font-size: 16px;
   display: block;
   font-weight: 600;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_p {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_p {
   font-size: 14px;
   display: block;
   line-height: 20px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: normal;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_info {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_info {
   margin: 10px 0px;
   display: flex;
   justify-content: space-between;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_info .cb_item {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_info .cb_item {
   width: 50%;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_info .cb_item p {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_info .cb_item p {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.5);
 }
-.block .container .block_content .card_order .card_block .c_b_desc .cb_info .cb_item b {
+.block .container .blocks_content .card_order .card_block .c_b_desc .cb_info .cb_item b {
   font-size: 18px;
   font-weight: normal;
 }
-.block .container .block_content .card_order .card_block .c_b_desc .yelo_bttn {
+.block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn {
   font-size: 14px;
   line-height: normal;
   font-weight: 500;
 }
 @media (min-width: 1100px) {
-  .block .container .block_content .card_order .card_block .c_b_desc .yelo_bttn {
+  .block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn {
     font-size: 16px;
     width: 200px;
     height: 55px;
@@ -1248,44 +1264,53 @@ body {
 }
 
 /*BLOGS*/
-.blogs .container .block_heading b {
+.blogs .container .block_title .block_heading b {
   padding: 7px 0px;
 }
-.blogs .container .block_content {
-  display: block;
+.blogs .container .blogs_content {
+  display: flex;
   margin: 0;
 }
-.blogs .container .block_content .col_content {
+.blogs .container .blogs_content .blogItem {
+  width: 100%;
+  padding: 15px;
+}
+@media (min-width: 1000px) {
+  .blogs .container .blogs_content .blogItem {
+    width: 33.3333%;
+  }
+}
+.blogs .container .blogs_content .blogItem .col_content {
   border-radius: 10px;
   border: 1px solid #ececec;
   height: 100%;
   overflow: hidden;
 }
-.blogs .container .block_content .col_content .news_1_desc {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc {
   padding: 20px;
   position: relative;
 }
-.blogs .container .block_content .col_content .news_1_desc b {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc b {
   font-size: 16px;
   font-weight: bold;
   line-height: 24px;
   display: inline-block;
   min-height: 72px;
 }
-.blogs .container .block_content .col_content .news_1_desc p {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc p {
   color: rgba(0, 0, 0, 0.5);
   font-size: 14px;
   line-height: 20px;
   padding: 67px 0 0 0;
 }
-.blogs .container .block_content .col_content .news_1_desc .news_foot {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc .news_foot {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: nowrap;
   align-content: stretch;
 }
-.blogs .container .block_content .col_content .news_1_desc .news_foot .arr_bttn {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc .news_foot .arr_bttn {
   margin-top: 10px;
   background: none;
   padding: 5px 0px;
@@ -1293,12 +1318,12 @@ body {
   transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
   color: #0091fe;
 }
-.blogs .container .block_content .col_content .news_1_desc .news_foot .time {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc .news_foot .time {
   display: inline-block;
   margin-top: 13px;
   color: rgba(0, 0, 0, 0.6);
 }
-.blogs .container .block_content .col_content .news_1_desc .full_link {
+.blogs .container .blogs_content .blogItem .col_content .news_1_desc .full_link {
   display: inline-block;
   width: 100%;
   height: 100%;
