--- a/src/scss/pages/home/_main.scss
+++ b/src/scss/pages/home/_main.scss
@@ -7,205 +7,207 @@ body {
 
 /*SLIDER*/
 
-.home_slider {
-  height: auto;
-  width: 100%;
-  margin: 110px 0 30px;
-  padding: 0px 15px;
-  overflow: hidden;
-  position: relative;
-  @media (min-width: 1000px) {
-    margin: 45px 0 50px 0;
-    height: 505px;
-    padding: 0;
-  }
-  .flickity-viewport {
-    height: 400px;
-    touch-action: pan-x;
-    border-radius: 10px;
-    overflow: hidden;
-    @media (min-width: 1000px) {
-      height: 505px;
-      border-radius: 0px;
-      overflow: none;
-    }
-    .flickity-slider {
-      // transform: translateX(-400%);
-      .slide_item {
-        position: absolute;
-        background-color: $primary-color;
-        height: 400px;
-        width: 100%;
-        @media (min-width: 1000px) {
-          height: 505px;
-        }
-        .slide_bg {
-          position: relative;
-          top: 0;
-          left: 0;
-          height: 190px;
-          width: 100%;
-          @media (min-width: 1000px) {
-            position: absolute;
-            height: 100%;
-          }
-          .slide_bg_self {
-            height: 100%;
-            width: 100%;
-            position: relative;
-            right: 0;
-            @media (min-width: 1000px) {
-              position: absolute;
-              width: 55%;
-            }
-            .sb_image {
-              position: absolute;
-              top: 0;
-              right: 0;
-              width: 100%;
-              height: 100%;
-              background-size: cover;
-              background-position: center;
-            }
-          }
-        }
-        .container {
-          @media (min-width: 1000px) {
-            height: 100%;
-          }
-          .slide_desc {
-            height: auto;
-            padding: 20px 30px;
-            position: relative;
-            z-index: 31;
-            @media (min-width: 1000px) {
-              height: 100%;
-            }
-            .slide_content {
-              width: 100%;
-              padding: 0;
-              @include flexible(
-                $jc: center,
-                $direction: column,
-                $wrap: nowrap,
-                $ai: stretch
-              );
-              align-content: stretch;
-              @media (min-width: 1000px) {
-                width: 60%;
-                position: relative;
-                height: 100%;
-              }
-              h3 {
-                font-size: $font-size-xl;
-                line-height: normal;
-                display: block;
-                margin-bottom: 10px;
-                @media (min-width: 1000px) {
-                  font-size: 40px;
-                  line-height: 55px;
-                }
-              }
-              p {
-                font-size: $font-size-md;
-                line-height: normal;
-                min-width: 100%;
-                color: $secondary-color;
-                letter-spacing: -0.2px;
-                @media (min-width: 1000px) {
-                  line-height: 26px;
-                  max-width: 70%;
-                }
-              }
-              ul {
-                @include flexible($jc: flex-start);
-                position: relative;
-                bottom: auto;
-                margin: 20px 0;
-                @media (min-width: 1000px) {
-                  position: absolute;
-                  bottom: 60px;
-                }
-                li {
-                  .brand_bttn {
-                    width: auto;
-                    margin-right: 10px;
-                    display: inline-block;
-                    padding: 10px 20px;
-                    font-size: $font-size-md;
-                    height: auto;
-                    color: $additional-white;
-                    position: relative;
-                    text-align: center;
-                    transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
-                    @media (min-width: 1000px) {
-                      width: 230px;
-                      margin-right: 30px;
-                      height: 60px;
-                      font-size: $font-size-xxlg;
-                      padding: 15px 20px;
-                    }
-                    span {
-                      position: relative;
-                      z-index: 1;
-                    }
-                    &::after {
-                      content: "";
-                      width: 100%;
-                      height: 100%;
-                      position: absolute;
-                      top: 0;
-                      left: 0;
-                      background-color: black;
-                      display: block;
-                      transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+// .home_slider {
+//   height: auto;
+//   width: 100%;
+//   margin: 110px 0 30px;
+//   padding: 0px 15px;
+//   overflow: hidden;
+//   position: relative;
+//   @media (min-width: 1000px) {
+//     margin: 45px 0 50px 0;
+//     height: 505px;
+//     padding: 0;
+//   }
+//   .flickity-viewport {
+//     height: 400px;
+//     touch-action: pan-x;
+//     border-radius: 10px;
+//     overflow: hidden;
+//     @media (min-width: 1000px) {
+//       height: 505px;
+//       border-radius: 0px;
+//       overflow: none;
+//     }
+//     .flickity-slider {
+//       // transform: translateX(-400%);
+//       .slide_item {
+//         position: absolute;
+//         background-color: $primary-color;
+//         height: 400px;
+//         width: 100%;
+//         @media (min-width: 1000px) {
+//           height: 505px;
+//         }
+//         .slide_bg {
+//           position: relative;
+//           top: 0;
+//           left: 0;
+//           height: 190px;
+//           width: 100%;
+//           @media (min-width: 1000px) {
+//             position: absolute;
+//             height: 100%;
+//           }
+//           .slide_bg_self {
+//             height: 100%;
+//             width: 100%;
+//             position: relative;
+//             right: 0;
+//             @media (min-width: 1000px) {
+//               position: absolute;
+//               width: 55%;
+//             }
+//             .sb_image {
+//               position: absolute;
+//               top: 0;
+//               right: 0;
+//               width: 100%;
+//               height: 100%;
+//               background-size: cover;
+//               background-position: center;
+//             }
+//           }
+//         }
+//         .container {
+//           @media (min-width: 1000px) {
+//             height: 100%;
+//           }
+//           .slide_desc {
+//             height: auto;
+//             padding: 20px 30px;
+//             position: relative;
+//             z-index: 31;
+//             @media (min-width: 1000px) {
+//               height: 100%;
+//             }
+//             .slide_content {
+//               width: 100%;
+//               padding: 0;
+//               @include flexible(
+//                 $jc: center,
+//                 $direction: column,
+//                 $wrap: nowrap,
+//                 $ai: stretch
+//               );
+//               align-content: stretch;
+//               @media (min-width: 1000px) {
+//                 width: 60%;
+//                 position: relative;
+//                 height: 100%;
+//               }
+//               h3 {
+//                 font-size: $font-size-xl;
+//                 line-height: normal;
+//                 display: block;
+//                 margin-bottom: 10px;
+//                 @media (min-width: 1000px) {
+//                   font-size: 40px;
+//                   line-height: 55px;
+//                 }
+//               }
+//               p {
+//                 font-size: $font-size-md;
+//                 line-height: normal;
+//                 min-width: 100%;
+//                 color: $secondary-color;
+//                 letter-spacing: -0.2px;
+//                 @media (min-width: 1000px) {
+//                   line-height: 26px;
+//                   max-width: 70%;
+//                 }
+//               }
+//               ul {
+//                 @include flexible($jc: flex-start);
+//                 position: relative;
+//                 bottom: auto;
+//                 margin: 20px 0;
+//                 @media (min-width: 1000px) {
+//                   position: absolute;
+//                   bottom: 60px;
+//                 }
+//                 li {
+//                   .brand_bttn {
+//                     width: auto;
+//                     margin-right: 10px;
+//                     display: inline-block;
+//                     padding: 10px 20px;
+//                     font-size: $font-size-md;
+//                     height: auto;
+//                     color: $additional-white;
+//                     position: relative;
+//                     text-align: center;
+//                     transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+//                     @media (min-width: 1000px) {
+//                       width: 230px;
+//                       margin-right: 30px;
+//                       height: 60px;
+//                       font-size: $font-size-xxlg;
+//                       padding: 15px 20px;
+//                     }
+//                     span {
+//                       position: relative;
+//                       z-index: 1;
+//                     }
+//                     &::after {
+//                       content: "";
+//                       width: 100%;
+//                       height: 100%;
+//                       position: absolute;
+//                       top: 0;
+//                       left: 0;
+//                       background-color: black;
+//                       display: block;
+//                       transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
 
-                      border-radius: 6px;
-                      @media (min-width: 1000px) {
-                        transform: skew(-14deg, 0);
-                      }
-                    }
-                    &:hover {
-                      color: $secondary-color;
+//                       border-radius: 6px;
+//                       @media (min-width: 1000px) {
+//                         transform: skew(-14deg, 0);
+//                       }
+//                     }
+//                     &:hover {
+//                       color: $secondary-color;
 
-                      &::after {
-                        background-color: $additional-white;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  .flickity-page-dots {
-    width: 100%;
-    top: 160px;
-    height: 20px;
-    position: absolute;
-    text-align: center;
-    @media (min-width: 1000px) {
-      width: 40%;
-      right: 0;
-      // bottom: 20px;
-      top: 90%;
-    }
-    .dot {
-      display: inline-block;
-      width: 8px;
-      height: 8px;
-      background-color: $secondary-color;
-      border-radius: 50%;
-      margin: 0px 10px;
-      &.is-selected {
-        box-shadow: 0 0 0 4px $primary-color;
-      }
-    }
-  }
-}
+//                       &::after {
+//                         background-color: $additional-white;
+//                       }
+//                     }
+//                   }
+//                 }
+//               }
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+//   .flickity-page-dots {
+//     width: 100%;
+//     top: 160px;
+//     height: 20px;
+//     position: absolute;
+//     text-align: center;
+//     @media (min-width: 1000px) {
+//       width: 40%;
+//       right: 0;
+//       // bottom: 20px;
+//       top: 90%;
+//     }
+//     .dot {
+//       display: inline-block;
+//       width: 8px;
+//       height: 8px;
+//       background-color: $secondary-color;
+//       border-radius: 50%;
+//       margin: 0px 10px;
+//       &.is-selected {
+//         box-shadow: 0 0 0 4px $primary-color;
+//       }
+//     }
+//   }
+// }
+
+
 
 /*STORIES*/
 .stories {
@@ -486,9 +488,170 @@ body {
         }
       }
       .calculator {
+        .col_content {
+          border-radius: 10px;
+          border: 1px solid #ececec;
+          height: 100%;
+          overflow: hidden;
+          .cc_title {
+            @include flexible($jc: space-between);
+            b {
+              font-size: $font-size-xl;
+            }
+            a {
+              display: none;
+            }
+          }
+          &.loan_calculator {
+            padding: 20px;
+          }
+          .loan_calc {
+            padding: 10px 0 0 0;
+            .lc_inputs {
+              border: 1px solid #ececec;
+              border-radius: 10px;
+              .lc_amount {
+                width: 100%;
+                p {
+                  color: $secondary-color;
+                  font-size: $font-size-15;
+                  line-height: 15px;
+                  margin-bottom: 4px;
+                }
+                .range_result {
+                  font-family: "m";
+                  font-size: $font-size-xxlg;
+                  line-height: 26px;
+                  width: 100%;
+                  outline: none;
+                  appearance: none;
+                  border: none;
+                }
+                .lc_c {
+                  position: absolute;
+                  font-family: "b";
+                  font-size: $font-size-15;
+                  text-transform: capitalize;
+                  color: rgba(0, 0, 0, 0.5);
+                  right: 30px;
+                  bottom: 20px;
+                  line-height: 15px;
+                }
+                // .range {
+                //   appearance: none;
+                //   -webkit-appearance: none;
+                //   background-color: #ececec;
+                //   width: 100%;
+                //   position: absolute;
+                //   left: 0;
+                //   bottom: 0;
+                //   outline: none;
+                //   &:focus {
+                //     outline: none;
+                //   }
+                //   &::-moz-range-thumb {
+                //     appearance: none;
+                //     cursor: pointer;
+                //     -webkit-appearance: none;
+                //     margin-top: -12px;
+                //     background-color: $additional-white;
+                //     border: 3px solid $primary-color;
+                //     height: 1.2rem;
+                //     width: 1.2rem;
+                //     border-radius: 50%;
+                //   }
+                // }
+              }
+              .lc_term {
+                width: 100%;
+                p {
+                  color: rgba(0, 0, 0);
+                  font-size: $font-size-15;
+                  line-height: 15px;
+                  margin-bottom: 4px;
+                }
+                .range_result {
+                  font-family: "m";
+                  font-size: 26px;
+                  line-height: 26px;
+                  width: 100%;
+                  outline: none;
+                  border: none;
+                }
+                .lc_c {
+                  position: absolute;
+                  font-family: "b";
+                  font-size: 15px;
+                  text-transform: capitalize;
+                  color: rgba(0, 0, 0, 0.5);
+                  right: 30px;
+                  bottom: 20px;
+                  line-height: 15px;
+                }
+              }
+            }
+            .lc_results {
+              width: 100%;
+              margin-top: 20px;
+              .lc_r_self{
+                @include flexible($jc:center);
+                margin-bottom: 5px;
+                width: 100%;
+                .lc_r_item{
+                  text-align: right;
+                  width: 33%;
+                  display: block;
+                  p{
+                   color: rgba(0, 0, 0, 0.5); 
+                   line-height: 16px;
+                   text-align: right;
+                  }
+                  b{
+                    font-size: 26px;
+                    font-family: 'm';
+                    span{
+                      font-size: $font-size-xl;
+                    }
+                  }
+                }
+              }
+              .yelo_bttn{
+                @extend %yellow_btn_mobile
+              }
+            }
+          }
+        }
       }
     }
   }
+}
+
+input[type="range"] {
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #ececec;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  outline: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+  appearance: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -12px;
+  background-color: $additional-white;
+  border: 3px solid $primary-color;
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 50%;
+}
+
+.lc_item {
+  padding: 10px;
+  position: relative;
 }
 
 .col {
@@ -512,13 +675,13 @@ body {
         }
       }
     }
-    .blogs_content { 
-      display: flex;
+    .blogs_content {
+      @include flexible($wrap: wrap);
       margin: 0;
       .blogItem {
         width: 100%;
         padding: 15px;
-        @media (min-width:1000px) {
+        @media (min-width: 1000px) {
           width: 33.3333%;
         }
         .col_content {
