--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn {
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .yelo_bttn, .block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn {
   width: 100%;
   color: #000000;
   background-color: #ffc628;
@@ -11,7 +11,7 @@
   display: inline-block;
   cursor: pointer;
 }
-.block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn:hover {
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .yelo_bttn:hover, .block .container .blocks_content .card_order .card_block .c_b_desc .yelo_bttn:hover {
   background-color: #000000;
   color: #fff;
 }
@@ -194,7 +194,7 @@ h3 {
 
 header {
   position: fixed;
-  top: 120px;
+  top: 119px;
   width: 100%;
   z-index: 990;
   transition: 0.3s all linear;
@@ -501,7 +501,7 @@ header .head-bottom .head-core .head-wrap nav ul li a::after {
   position: absolute;
   background-color: #000000;
   left: 0;
-  bottom: 15px;
+  bottom: 0;
   transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
 }
 header .head-bottom .head-core .head-wrap nav ul li a:hover::after {
@@ -753,224 +753,6 @@ body {
 }
 
 /*SLIDER*/
-.home_slider {
-  height: auto;
-  width: 100%;
-  margin: 110px 0 30px;
-  padding: 0px 15px;
-  overflow: hidden;
-  position: relative;
-}
-@media (min-width: 1000px) {
-  .home_slider {
-    margin: 45px 0 50px 0;
-    height: 505px;
-    padding: 0;
-  }
-}
-.home_slider .flickity-viewport {
-  height: 400px;
-  touch-action: pan-x;
-  border-radius: 10px;
-  overflow: hidden;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport {
-    height: 505px;
-    border-radius: 0px;
-    overflow: none;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item {
-  position: absolute;
-  background-color: #ffc628;
-  height: 400px;
-  width: 100%;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item {
-    height: 505px;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .slide_bg {
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 190px;
-  width: 100%;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .slide_bg {
-    position: absolute;
-    height: 100%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .slide_bg .slide_bg_self {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  right: 0;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .slide_bg .slide_bg_self {
-    position: absolute;
-    width: 55%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .slide_bg .slide_bg_self .sb_image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container {
-    height: 100%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc {
-  height: auto;
-  padding: 20px 30px;
-  position: relative;
-  z-index: 31;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc {
-    height: 100%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content {
-  width: 100%;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  align-content: stretch;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content {
-    width: 60%;
-    position: relative;
-    height: 100%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content h3 {
-  font-size: 20px;
-  line-height: normal;
-  display: block;
-  margin-bottom: 10px;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content h3 {
-    font-size: 40px;
-    line-height: 55px;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content p {
-  font-size: 16px;
-  line-height: normal;
-  min-width: 100%;
-  color: #000000;
-  letter-spacing: -0.2px;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content p {
-    line-height: 26px;
-    max-width: 70%;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul {
-  display: flex;
-  justify-content: flex-start;
-  position: relative;
-  bottom: auto;
-  margin: 20px 0;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul {
-    position: absolute;
-    bottom: 60px;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn {
-  width: auto;
-  margin-right: 10px;
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 16px;
-  height: auto;
-  color: #fff;
-  position: relative;
-  text-align: center;
-  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn {
-    width: 230px;
-    margin-right: 30px;
-    height: 60px;
-    font-size: 26px;
-    padding: 15px 20px;
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn span {
-  position: relative;
-  z-index: 1;
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: black;
-  display: block;
-  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
-  border-radius: 6px;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn::after {
-    transform: skew(-14deg, 0);
-  }
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn:hover {
-  color: #000000;
-}
-.home_slider .flickity-viewport .flickity-slider .slide_item .container .slide_desc .slide_content ul li .brand_bttn:hover::after {
-  background-color: #fff;
-}
-.home_slider .flickity-page-dots {
-  width: 100%;
-  top: 160px;
-  height: 20px;
-  position: absolute;
-  text-align: center;
-}
-@media (min-width: 1000px) {
-  .home_slider .flickity-page-dots {
-    width: 40%;
-    right: 0;
-    top: 90%;
-  }
-}
-.home_slider .flickity-page-dots .dot {
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  background-color: #000000;
-  border-radius: 50%;
-  margin: 0px 10px;
-}
-.home_slider .flickity-page-dots .dot.is-selected {
-  box-shadow: 0 0 0 4px #ffc628;
-}
-
 /*STORIES*/
 .stories {
   margin-bottom: 30px;
@@ -1252,6 +1034,146 @@ body {
     padding: 13px 25px;
   }
 }
+.block .container .blocks_content .calculator .col_content {
+  border-radius: 10px;
+  border: 1px solid #ececec;
+  height: 100%;
+  overflow: hidden;
+}
+.block .container .blocks_content .calculator .col_content .cc_title {
+  display: flex;
+  justify-content: space-between;
+}
+.block .container .blocks_content .calculator .col_content .cc_title b {
+  font-size: 20px;
+}
+.block .container .blocks_content .calculator .col_content .cc_title a {
+  display: none;
+}
+.block .container .blocks_content .calculator .col_content.loan_calculator {
+  padding: 20px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc {
+  padding: 10px 0 0 0;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs {
+  border: 1px solid #ececec;
+  border-radius: 10px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_amount {
+  width: 100%;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_amount p {
+  color: #000000;
+  font-size: 15px;
+  line-height: 15px;
+  margin-bottom: 4px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_amount .range_result {
+  font-family: "m";
+  font-size: 26px;
+  line-height: 26px;
+  width: 100%;
+  outline: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_amount .lc_c {
+  position: absolute;
+  font-family: "b";
+  font-size: 15px;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.5);
+  right: 30px;
+  bottom: 20px;
+  line-height: 15px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_term {
+  width: 100%;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_term p {
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  line-height: 15px;
+  margin-bottom: 4px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_term .range_result {
+  font-family: "m";
+  font-size: 26px;
+  line-height: 26px;
+  width: 100%;
+  outline: none;
+  border: none;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_term .lc_c {
+  position: absolute;
+  font-family: "b";
+  font-size: 15px;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.5);
+  right: 30px;
+  bottom: 20px;
+  line-height: 15px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results {
+  width: 100%;
+  margin-top: 20px;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+  width: 100%;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item {
+  text-align: right;
+  width: 33%;
+  display: block;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item p {
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 16px;
+  text-align: right;
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item b {
+  font-size: 26px;
+  font-family: "m";
+}
+.block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item b span {
+  font-size: 20px;
+}
+input[type=range] {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  background-color: #ececec;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  outline: none;
+}
+
+input[type=range]::-moz-range-thumb {
+  -moz-appearance: none;
+       appearance: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -12px;
+  background-color: #fff;
+  border: 3px solid #ffc628;
+  height: 1.2rem;
+  width: 1.2rem;
+  border-radius: 50%;
+}
+
+.lc_item {
+  padding: 10px;
+  position: relative;
+}
+
 .col {
   width: 100% !important;
   padding: 0px !important;
@@ -1272,6 +1194,7 @@ body {
 }
 .blogs .container .blogs_content {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
 }
 .blogs .container .blogs_content .blogItem {
@@ -1358,4 +1281,184 @@ body {
   background-position: calc(100% - 12px) 50%;
   background-color: #0091fe;
   color: #fff;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  margin: 110px 0 30px;
+  padding: 0px 15px;
+}
+@media (min-width: 1000px) {
+  .swiper {
+    margin: 0px 0 30px;
+    padding: 0;
+  }
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #000000;
+}
+
+.swiper-wrapper {
+  border-radius: 15px;
+}
+
+.swiper-slide {
+  display: block;
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 1000px) {
+  .swiper-slide {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+.swiper-slide .text_area {
+  background-color: #ffc628;
+  height: auto;
+  padding: 20px 30px;
+  position: relative;
+  z-index: 31;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area {
+    padding-left: 11%;
+    min-height: 100%;
+    width: 65%;
+  }
+}
+.swiper-slide .text_area::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  right: -100px;
+  top: 100px;
+  border: 50px dotted red;
+  border-bottom: 10px solid transparent;
+  height: 0;
+  width: 0;
+  background-color: red;
+}
+.swiper-slide .text_area .slide_content {
+  width: 100%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-content: stretch;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content {
+    width: 60%;
+    position: relative;
+    height: 100%;
+  }
+}
+.swiper-slide .text_area .slide_content h3 {
+  font-size: 20px;
+  line-height: normal;
+  display: block;
+  margin-bottom: 10px;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content h3 {
+    font-size: 40px;
+    line-height: 55px;
+  }
+}
+.swiper-slide .text_area .slide_content p {
+  font-size: 16px;
+  line-height: normal;
+  min-width: 100%;
+  color: #000000;
+  letter-spacing: -0.2px;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content p {
+    line-height: 26px;
+    max-width: 70%;
+  }
+}
+.swiper-slide .text_area .slide_content ul {
+  display: flex;
+  justify-content: flex-start;
+  position: relative;
+  bottom: auto;
+  margin: 20px 0;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content ul {
+    position: absolute;
+    bottom: 60px;
+  }
+}
+.swiper-slide .text_area .slide_content ul li .brand_bttn {
+  width: auto;
+  margin-right: 10px;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  height: auto;
+  color: #fff;
+  position: relative;
+  text-align: center;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content ul li .brand_bttn {
+    width: 230px;
+    margin-right: 30px;
+    height: 60px;
+    font-size: 26px;
+    padding: 15px 20px;
+  }
+}
+.swiper-slide .text_area .slide_content ul li .brand_bttn span {
+  position: relative;
+  top: -5px;
+  z-index: 1;
+}
+.swiper-slide .text_area .slide_content ul li .brand_bttn::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  display: block;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+  border-radius: 6px;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .text_area .slide_content ul li .brand_bttn::after {
+    transform: skew(-14deg, 0);
+  }
+}
+.swiper-slide .text_area .slide_content ul li .brand_bttn:hover {
+  color: #000000;
+}
+.swiper-slide .text_area .slide_content ul li .brand_bttn:hover::after {
+  background-color: #fff;
+}
+.swiper-slide .img-partt {
+  width: 100%;
+  height: 190px;
+}
+@media (min-width: 1000px) {
+  .swiper-slide .img-partt {
+    min-height: 505px;
+    width: 45%;
+  }
+}
+.swiper-slide .img-partt img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=style.css.map */
