--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -37,7 +37,7 @@ body {
 
 .container {
   max-width: 1140px;
-  margin: auto;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -768,7 +768,7 @@ body {
 }
 @media (min-width: 1000px) {
   .stories .container .block_title {
-    padding: 0px;
+    padding: 0px 15px;
     display: flex;
     justify-content: space-between;
   }
@@ -1050,6 +1050,23 @@ body {
 .block .container .blocks_content .calculator .col_content .cc_title a {
   display: none;
 }
+@media (min-width: 1000px) {
+  .block .container .blocks_content .calculator .col_content .cc_title a {
+    background-image: url("../../../../public/images/blueright.svg");
+    background-repeat: no-repeat;
+    background-position: right 9px;
+    display: inline-block;
+    font-family: "b";
+    padding: 5px 38px 5px 0px;
+    transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+    color: #0091fe;
+  }
+  .block .container .blocks_content .calculator .col_content .cc_title a:hover {
+    margin: 0 -8px 0 0;
+    padding: 5px 46px 5px 0;
+    background-position: right 9px;
+  }
+}
 .block .container .blocks_content .calculator .col_content.loan_calculator {
   padding: 20px;
 }
@@ -1059,6 +1076,15 @@ body {
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs {
   border: 1px solid #ececec;
   border-radius: 10px;
+}
+@media (min-width: 1000px) {
+  .block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs {
+    height: 70px;
+    border: 1px solid #e7e7e7;
+    border-radius: 10px 10px 10px 0;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_inputs .lc_amount {
   width: 100%;
@@ -1121,21 +1147,40 @@ body {
   width: 100%;
   margin-top: 20px;
 }
+@media (min-width: 1000px) {
+  .block .container .blocks_content .calculator .col_content .loan_calc .lc_results {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 45px;
+  }
+}
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self {
   display: flex;
   justify-content: center;
+  flex-direction: row;
   margin-bottom: 5px;
   width: 100%;
+}
+@media (min-width: 1000px) {
+  .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self {
+    width: calc(100% - 50px);
+  }
 }
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item {
   text-align: right;
   width: 33%;
   display: block;
 }
+@media (min-width: 1000px) {
+  .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item {
+    width: 50%;
+    margin: 0;
+  }
+}
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item p {
   color: rgba(0, 0, 0, 0.5);
   line-height: 16px;
-  text-align: right;
 }
 .block .container .blocks_content .calculator .col_content .loan_calc .lc_results .lc_r_self .lc_r_item b {
   font-size: 26px;
@@ -1154,6 +1199,11 @@ input[type=range] {
   left: 0;
   bottom: 0;
   outline: none;
+}
+@media (min-width: 1000px) {
+  input[type=range] {
+    background-color: transparent;
+  }
 }
 
 input[type=range]::-moz-range-thumb {
@@ -1182,12 +1232,18 @@ input[type=range]::-moz-range-thumb {
 @media (min-width: 1000px) {
   .col {
     width: 50% !important;
+    padding: 0 15px !important;
   }
 }
 
 /*BLOGS*/
 .blogs {
   margin-top: 2rem;
+}
+@media (min-width: 1000px) {
+  .blogs .container .block_title .block_heading {
+    padding: 0px 15px;
+  }
 }
 .blogs .container .block_title .block_heading b {
   padding: 7px 0px;
@@ -1283,6 +1339,263 @@ input[type=range]::-moz-range-thumb {
   color: #fff;
 }
 
+/* BENEFITS*/
+.benefits {
+  margin-bottom: 30px;
+}
+.benefits .container {
+  padding: 15px;
+}
+.benefits .container .block_title {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+.benefits .container .block_title .block-heading b {
+  padding: 7px 0px;
+  font-size: 18px;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_title .block-heading b {
+    font-size: 26px;
+  }
+}
+.benefits .container .block_content {
+  display: block;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col {
+    width: 66.66% !important;
+    padding: 0 15px;
+  }
+}
+.benefits .container .block_content .col .col_content {
+  border-radius: 10px;
+  border: 1px solid #ececec;
+  height: 100%;
+  overflow: hidden;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content {
+    height: 392.2px;
+  }
+}
+.benefits .container .block_content .col .col_content.app_block {
+  background: none;
+  position: relative;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content.app_block {
+    background-image: url("../../../../public/images/Rectangle.svg") !important;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: contain;
+    position: relative;
+  }
+}
+.benefits .container .block_content .col .col_content .app_image {
+  width: 100%;
+  bottom: 0px;
+  right: 0px;
+  position: relative;
+  height: 200px;
+  background-color: #ffc629;
+  border-radius: 10px 10px 0 0;
+  overflow: hidden;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_image {
+    width: 50%;
+    bottom: 0px;
+    right: 30px;
+    position: absolute;
+    height: 115%;
+    background-color: transparent;
+    overflow: hidden;
+  }
+}
+.benefits .container .block_content .col .col_content .app_image .app_phone {
+  position: relative;
+  top: 0;
+  left: -22px;
+  width: 180px;
+  height: 100%;
+  margin: 0 auto;
+  background-size: contain;
+  background-position: bottom right;
+  background-repeat: no-repeat;
+  z-index: 2;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_image .app_phone {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-size: contain;
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    background-image: url(img/app_phone.png);
+    z-index: 2;
+  }
+}
+.benefits .container .block_content .col .col_content .app_image .app_self {
+  width: 120px;
+  height: 213px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  bottom: 0;
+  background-color: #ffc628;
+  background-size: cover;
+  margin: 0 0 0 -60px;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_image .app_self {
+    width: 250px;
+    height: 375px;
+    left: 150px;
+    top: 80px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc {
+  padding: 20px;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  height: 100%;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc {
+    padding: 45px;
+    width: 50%;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc b {
+  font-size: 20px;
+  line-height: 22px;
+  margin-bottom: 5px;
+  display: block;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc b {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 10px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .app_p {
+  font-size: 15px;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.5);
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .app_p {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test {
+  position: relative;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: auto;
+  margin: 10px 0 0 0;
+  border-radius: 5px;
+  border: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .test {
+    height: 55px;
+    position: absolute;
+    bottom: 45px;
+    left: 45px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li {
+  width: 33%;
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store {
+  display: block;
+  padding: 4px;
+  white-space: nowrap;
+  text-align: center;
+  height: 100%;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .test li .store {
+    padding: 0px 4px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store span {
+  font-size: 11px;
+  opacity: 0.5;
+  color: #434E58;
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store p {
+  font-size: 16px;
+  position: relative;
+  top: -3px;
+  opacity: 0.5;
+  color: #434E58;
+  letter-spacing: -0.4px;
+  line-height: 9px;
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store.apple div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .test li .store.apple div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store.google_play div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .test li .store.google_play div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+.benefits .container .block_content .col .col_content .app_b_desc .test li .store.huawei_play div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col .col_content .app_b_desc .test li .store.huawei_play div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -1325,22 +1638,24 @@ input[type=range]::-moz-range-thumb {
 }
 @media (min-width: 1000px) {
   .swiper-slide .text_area {
-    padding-left: 11%;
+    padding-left: 15%;
     min-height: 100%;
     width: 65%;
   }
 }
-.swiper-slide .text_area::after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  right: -100px;
-  top: 100px;
-  border: 50px dotted red;
-  border-bottom: 10px solid transparent;
-  height: 0;
-  width: 0;
-  background-color: red;
+@media (min-width: 1000px) {
+  .swiper-slide .text_area::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    right: -100px;
+    top: 0;
+    left: 0;
+    border: 50px solid #ffc628;
+    border-bottom: 20px solid transparent;
+    height: 0;
+    width: 0;
+  }
 }
 .swiper-slide .text_area .slide_content {
   width: 100%;
