--- a/src/scss/pages/about/blogs.css
+++ b/src/scss/pages/about/blogs.css
@@ -23,6 +23,14 @@ body {
   padding: 0;
 }
 
+input {
+  outline: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+}
+
 a {
   cursor: pointer;
   white-space: nowrap;
