--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -41,6 +41,14 @@ body {
   padding: 0;
 }
 
+input {
+  outline: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+}
+
 a {
   cursor: pointer;
   white-space: nowrap;
@@ -744,6 +752,282 @@ header .head-bottom .head_adds .sub_menu_wrap .menu_right {
   }
 }
 
+footer {
+  margin-bottom: 40px !important;
+  margin-top: 20px;
+}
+@media (min-width: 1000px) {
+  footer {
+    margin-top: 50px;
+  }
+}
+footer .container {
+  padding: 0px 15px;
+}
+@media (min-width: 1000px) {
+  footer .container {
+    padding: 0;
+  }
+}
+footer .container .foot_nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 24px 24px;
+  padding: 32px 0px 32px;
+  border-top: 1px solid #ececec;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_nav {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+footer .container .foot_nav h3 {
+  font-size: 18px;
+  padding: 0px 0px 16px;
+  line-height: 1.5;
+  font-weight: 600;
+}
+@media (min-height: 1000px) {
+  footer .container .foot_nav h3 {
+    font-size: 27px;
+  }
+}
+footer .container .foot_nav li {
+  padding: 0px 0px 8px;
+  font-size: 14px;
+  line-height: 1.43;
+}
+footer .container .foot_nav li a {
+  color: rgba(0, 0, 0, 0.5);
+  transition: 0.3s ease all;
+}
+footer .container .foot_nav li a:hover {
+  color: #000000;
+  border-bottom: 2px solid #ffc628;
+}
+footer .container .foot_top {
+  border-bottom: 1px solid #ececec;
+  padding: 15px 0;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+footer .container .foot_top .social {
+  width: 100%;
+  text-align: center;
+  display: block;
+  height: 40px;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .social {
+    text-align: default;
+  }
+}
+footer .container .foot_top .social li {
+  margin: 0px 4px;
+  display: inline-block;
+}
+footer .container .foot_top .social li a {
+  width: 40px;
+  height: 40px;
+  background-color: #f3f1f7;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: block;
+  border-radius: 100%;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+}
+footer .container .foot_top .social li a:hover {
+  width: 50px;
+  height: 50px;
+}
+footer .container .foot_top .app_b_desc {
+  padding: 20px;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  height: 100%;
+}
+footer .container .foot_top .app_b_desc.show_mobile {
+  display: block;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc.show_mobile {
+    display: none;
+  }
+}
+footer .container .foot_top .app_b_desc .test {
+  position: relative;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: auto;
+  margin: 10px 0 0 0;
+  border-radius: 5px;
+  border: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc .test {
+    height: 55px;
+    position: absolute;
+    bottom: 45px;
+    left: 45px;
+  }
+}
+footer .container .foot_top .app_b_desc .test li {
+  width: 33%;
+}
+footer .container .foot_top .app_b_desc .test li .store {
+  display: block;
+  padding: 4px;
+  white-space: nowrap;
+  text-align: center;
+  height: 100%;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc .test li .store {
+    padding: 0px 4px;
+  }
+}
+footer .container .foot_top .app_b_desc .test li .store span {
+  font-size: 11px;
+  opacity: 0.5;
+  color: #434E58;
+}
+footer .container .foot_top .app_b_desc .test li .store p {
+  font-size: 16px;
+  position: relative;
+  top: -3px;
+  opacity: 0.5;
+  color: #434E58;
+  letter-spacing: -0.4px;
+  line-height: 9px;
+}
+footer .container .foot_top .app_b_desc .test li .store.apple div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc .test li .store.apple div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+footer .container .foot_top .app_b_desc .test li .store.google_play div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc .test li .store.google_play div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+footer .container .foot_top .app_b_desc .test li .store.huawei_play div {
+  background-repeat: no-repeat;
+  background-position: left 9px;
+  display: inline-block;
+  padding-left: 24px;
+  background-size: 15px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+@media (min-width: 1000px) {
+  footer .container .foot_top .app_b_desc .test li .store.huawei_play div {
+    padding: 6px 0 6px 25px;
+    display: block;
+    background-position: left 17px;
+  }
+}
+footer .container .foot_top .contact_inf {
+  width: 100%;
+  padding-top: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+footer .container .foot_top .contact_inf .ci_item {
+  width: 50%;
+}
+footer .container .foot_top .contact_inf .ci_item:first-child {
+  display: none;
+}
+footer .container .foot_top .contact_inf .ci_item p {
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.5);
+}
+footer .container .foot_top .contact_inf .ci_item strong {
+  color: #000000;
+}
+footer .container .foot_top .contact_inf .ci_item strong a {
+  color: #000000;
+}
+footer .container .foot_bottom {
+  padding: 30px 0 40px;
+  text-align: center;
+}
+footer .container .foot_bottom .logo {
+  display: inline-block;
+  width: 150px;
+  margin: 0 0 10px;
+  height: 36px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+footer .container .foot_bottom ul {
+  font-size: 12px;
+  width: 100%;
+}
+footer .container .foot_bottom ul li {
+  display: inline-block;
+  margin: 10px;
+}
+footer .container .foot_bottom ul li p {
+  color: rgba(0, 0, 0, 0.5);
+  vertical-align: middle;
+  display: inline-block;
+}
+footer .container .foot_bottom ul li a {
+  color: rgba(0, 0, 0, 0.5);
+  text-decoration: underline;
+}
+footer .container .foot_bottom .by_omar {
+  margin-top: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
+footer .container .foot_bottom .by_omar p {
+  display: inline-block;
+  vertical-align: middle;
+}
+footer .container .foot_bottom .by_omar a {
+  padding: 0 0 0 22px;
+  display: inline-block;
+  margin: 0 0 0 9px;
+  vertical-align: middle;
+  color: rgba(0, 0, 0, 0.5);
+  text-decoration: underline;
+}
+
 main {
   padding: 120px 0 0;
 }
@@ -1202,7 +1486,8 @@ input[type=range] {
 }
 @media (min-width: 1000px) {
   input[type=range] {
-    background-color: transparent;
+    background-color: #ffc628;
+    height: 2px;
   }
 }
 
@@ -1218,7 +1503,6 @@ input[type=range]::-moz-range-thumb {
   width: 1.2rem;
   border-radius: 50%;
 }
-
 .lc_item {
   padding: 10px;
   position: relative;
@@ -1364,10 +1648,134 @@ input[type=range]::-moz-range-thumb {
   display: block;
 }
 @media (min-width: 1000px) {
-  .benefits .container .block_content .col {
+  .benefits .container .block_content {
+    display: flex;
+  }
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col:first-child {
     width: 66.66% !important;
     padding: 0 15px;
   }
+}
+.benefits .container .block_content .col:last-child {
+  margin: 0;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col:last-child {
+    width: 32.33% !important;
+    padding: 0 15px;
+  }
+}
+.benefits .container .block_content .col:last-child .exchange_rate {
+  padding: 20px;
+}
+.benefits .container .block_content .col:last-child .cc_title {
+  display: flex;
+  justify-content: space-between;
+}
+.benefits .container .block_content .col:last-child .cc_title b {
+  font-size: 20px;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates {
+  position: relative;
+  padding-top: 5px;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates a {
+  display: none;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates .active_lang {
+  color: rgba(0, 0, 0, 0.5);
+  background: url("../../../../public/images/activeLang.svg") no-repeat right center;
+  padding: 5px 15px 0 0;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates .select_box {
+  transform-origin: right top;
+  position: absolute;
+  left: auto;
+  right: 0;
+  top: 0;
+  transform: scale(0);
+  opacity: 0;
+  transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+  visibility: hidden;
+  border-radius: 5px;
+  padding: 10px 0;
+  background: #ffffff;
+  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.17);
+  text-align: left;
+  z-index: 9;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates .select_box li {
+  padding: 0;
+  margin: 0;
+  display: block;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates .select_box li a {
+  padding: 0px 20px;
+  display: block;
+  white-space: nowrap;
+}
+.benefits .container .block_content .col:last-child .cc_title .change_rates .select_box li a.active {
+  color: #000000;
+}
+.benefits .container .block_content .col:last-child .calculator .c_line {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid #ffc628;
+  padding-top: 10px;
+}
+.benefits .container .block_content .col:last-child .calculator .c_line .c_int {
+  font-size: 21px;
+  width: 100%;
+  height: 40px;
+  outline: none;
+}
+.benefits .container .block_content .col:last-child .calculator .c_line .s_curr {
+  background-color: transparent;
+  border: none;
+  font-weight: 600;
+}
+.benefits .container .block_content .col:last-child .calculator .c_result {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px;
+}
+.benefits .container .block_content .col:last-child .calculator .c_result .cr_item {
+  width: 33.3333%;
+}
+.benefits .container .block_content .col:last-child .calculator .c_result .cr_item p {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.benefits .container .block_content .col:last-child .calculator .c_result .cr_item b {
+  font-size: 16px;
+  font-weight: 500;
+  display: block;
+}
+.benefits .container .block_content .col:last-child .info_p {
+  padding: 15px 0px 0px;
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 14px;
+}
+.benefits .container .block_content .col:last-child .all_exchanges {
+  background-color: red;
+  margin: 25px -20px -20px;
+  border-top: 1px solid #ECECEC;
+  display: block;
+  padding: 17px 30px;
+  transition: all 0.2s cubic-bezier(0.52, 0.01, 0.16, 1);
+  background: url(../../../../public/images/blueright.svg) no-repeat 91% 21px;
+}
+@media (min-width: 1000px) {
+  .benefits .container .block_content .col:last-child .all_exchanges {
+    margin: 15px -20px -20px;
+  }
+}
+.benefits .container .block_content .col:last-child .all_exchanges:hover {
+  background-color: #0091fe;
+  color: #fff;
+  background-image: url(../../../../public/images/whiteright.svg);
 }
 .benefits .container .block_content .col .col_content {
   border-radius: 10px;
@@ -1457,7 +1865,7 @@ input[type=range]::-moz-range-thumb {
     width: 250px;
     height: 375px;
     left: 150px;
-    top: 80px;
+    top: 75px;
   }
 }
 .benefits .container .block_content .col .col_content .app_b_desc {
@@ -1638,7 +2046,7 @@ input[type=range]::-moz-range-thumb {
 }
 @media (min-width: 1000px) {
   .swiper-slide .text_area {
-    padding-left: 15%;
+    padding-left: 20%;
     min-height: 100%;
     width: 65%;
   }
